# replicate

./: .env.example  README.md  clickhouse.py  cog.yaml  constants.py  finetune.py  main.py  output.jsonl  prompt.py  pyproject.toml  train.py
data/: prompts.jsonl
forecast/: finetune.py  main.py  predict.py  prices.py  prompt.py
