[tool.poetry]
name = "forecast"
version = "0.1.0"
description = ""
authors = ["Tumay Tuzcu <tumay@semiotic.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "^1.26.4"
cog = "^0.9.9"
pillow = "^10.3.0"
keras = "2.14.0"
tensorflow = {version = "2.14.0", extras = ["and-gpu"]}
replicate = "^0.26.0"
pandas = "^2.2.2"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
clickhouse-connect = "^0.7.12"
tqdm = "^4.66.4"
jsonlines = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
forecast = "forecast.main:main"
prices = "forecast.prices:generate_prices"
prompts = "forecast.finetune:prompts"
train = "forecast.finetune:train"
